k8s/home-assistant/manifests/3-ha-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-automation
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:stable
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /config
          ports:
            - name: ui
              containerPort: 8123
              protocol: TCP
          livenessProbe:
            httpGet:
              path: "/"
              port: 8123
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/"
              port: 8123
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: false
            runAsUser: 0
            runAsGroup: 0
            capabilities:
              add: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: home-assistant-data
