k8s/home-assistant/manifests/7-eufy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eufy-security-ws
  namespace: home-automation
  labels:
    app.kubernetes.io/name: eufy-security-ws
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: eufy-security-ws
  template:
    metadata:
      labels:
        app.kubernetes.io/name: eufy-security-ws
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: eufy-security-ws
          image: bropat/eufy-security-ws:2.1.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: false
            runAsUser: 0
            runAsGroup: 0
            capabilities:
              add: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: eufy-ws-data
