k8s/home-assistant/manifests/11-scrypted-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrypted
  namespace: home-automation
spec:
  selector:
    app.kubernetes.io/name: scrypted
  ports:
    - name: http
      port: 443
      targetPort: 10443
      protocol: TCP
  type: ClusterIP
