k8s/home-assistant/manifests/eufy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: eufy-security-ws
  namespace: home-automation
spec:
  selector:
    app.kubernetes.io/name: eufy-security-ws
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
