k8s/home-assistant/manifests/ha-http-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-automation
spec:
  selector:
    app.kubernetes.io/name: home-assistant
  ports:
    - name: http
      port: 80
      targetPort: 8123
      protocol: TCP
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-automation
spec:
  parentRefs:
    - name: envoy-gw
      sectionName: https
      namespace: default
  hostnames:
    - home.tale.me
  rules:
    - backendRefs:
        - name: home-assistant
          port: 80
